--- a/1-classic-grunt/package.json
+++ b/1-classic-grunt/package.json
@@ -5,6 +5,9 @@
   "author": "Billy Onjea",
   "dependencies": {},
   "devDependencies": {
-
+    "grunt": "~0.4.1",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-cssmin": "~0.7.0",
+    "grunt-contrib-uglify": "~0.2.7"
   }
 }
